--- a/project3.html
+++ b/project3.html
@@ -332,4 +332,12 @@ axios.png
 
 go to the components directory by running, cd src/components 
 
+open ListTodo.js; App.js, App.css, index.css and populate them with the code provided.
+
+go to the Todo directory and run; npm run dev
+
+the To-Do app is now ready and fully functional with the functunailty: creating a task, deleting a task and viewing all your tasks.
+
+endproject3.png
+
 
